tests/testfiles/valid/arithmetics/multiple_express.c
int main(){
    int a = 1;
    int b = 2;
    int c = 3;
    int tmp;
    tmp = (((b + a) / c) * 4);
    return tmp;
}