tests/testfiles/invalid/arithmetics/arith_identifier.c
int main() {
    int 1+1 = 2;
    return 0;
}